# e2node

./: CMakeLists.txt  e2node-tester.conf  run_tester
doc/: README.md  architecture.md  motivations.md  simulated_node_configuration.md
extra/tester/: Dockerfile  build_in_container.sh  entrypoint.sh
include/: e2node_message.h  value.h  value_generator.h
include/e2node/: e2.h  errno_exception.h  event_selector.h  message.h  processor.h  sctp_socket.h  timer_manager.h  value.h  value_generator.h
simulator/: CMakeLists.txt  node_builder.cc  node_builder.h  sim_values.cc  sim_values.h
src/: CMakeLists.txt  e2.cc  e2node_message.cc  event_selector.cc  message.cc  processor.cc  sctp_socket.cc  timer_manager.cc  timer_manager.h  types.h  value.cc  value.h  value_generator.cc  value_generator.h
test/: CMakeLists.txt  builder.cc  e2.cc  e2node_message.cc  event_selector.cc  mock_event_selector.h  mock_sctp_socket.h  node_config_1.yaml  processor.cc  sctp_socket.cc  sim_values.cc  test_main.cc  test_runner  timer_manager.cc  value.cc
